add all functions
Signed-off-by: xinyual <xinyual@amazon.com>